# wine-llmops

./: .gitignore  Dockerfile  README.md  app.py  create_index.py  docker-compose-az.yml  docker-compose.yml  embeddings.py  pyproject.toml  requirements.txt
.github/workflows/: azure-container-webapp.yml  main_barneyllm.yml
fastapi_backend/: Dockerfile  main.py  requirements.txt
streamlit_frontend/: Dockerfile  requirements.txt  streamlit.py
tests/: azure_search_response_test.py  chatbot_context_response_test.py  search_client_test.py
webapp/: main.py
