[tool.poetry]
name = "wine-llmops"
version = "0.1.0"
description = ""
authors = ["GregoryTomy <95327355+GregoryTomy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.16.2"
python-dotenv = "^1.0.1"
fastapi = "^0.110.1"
azure-identity = "^1.15.0"
azure-search-documents = "^11.4.0"
langchain-community = "^0.0.31"
langchain-openai = "^0.1.1"
langchain-text-splitters = "^0.0.1"
transformers = "^4.39.3"
py-itree = "^0.0.19"
itree = "^0.0.5"
ipykernel = "^6.29.4"
black = "^24.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
